[gd_scene load_steps=7 format=3 uid="uid://dsv566w4evo8b"]

[ext_resource type="Texture2D" uid="uid://cywufl2slityq" path="res://Assets/Icons/NodesIcons/Arrow02.svg" id="1_242j4"]
[ext_resource type="Texture2D" uid="uid://wi8pxdiqq765" path="res://Assets/Icons/NodesIcons/Arrow01.svg" id="1_dup0t"]
[ext_resource type="Script" path="res://Scripts/GraphNodes/ConditionNode.gd" id="3_vhhwe"]

[sub_resource type="Theme" id="Theme_llmqa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlc1d"]
content_margin_left = 5.0
content_margin_top = 2.0
content_margin_right = 5.0
content_margin_bottom = 2.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v4ya3"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="ConditionNode" type="GraphNode" groups=["graph_nodes"]]
offset_right = 291.0
offset_bottom = 103.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_llmqa")
theme_override_constants/title_h_offset = 5
title = "ConditionNode"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_dup0t")
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("1_242j4")
slot/0/draw_stylebox = false
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = ExtResource("1_242j4")
slot/1/draw_stylebox = false
script = ExtResource("3_vhhwe")

[node name="MarginIfContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="IfContainer" type="HBoxContainer" parent="MarginIfContainer"]
layout_mode = 2

[node name="IfLabel" type="Label" parent="MarginIfContainer/IfContainer"]
layout_mode = 2
text = "If"

[node name="VariableContainer" type="PanelContainer" parent="MarginIfContainer/IfContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mlc1d")

[node name="VariableLabel" type="Label" parent="MarginIfContainer/IfContainer/VariableContainer"]
layout_mode = 2
text = "variable"
label_settings = SubResource("LabelSettings_v4ya3")

[node name="OperatorContainer" type="PanelContainer" parent="MarginIfContainer/IfContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mlc1d")

[node name="OperatorLabel" type="Label" parent="MarginIfContainer/IfContainer/OperatorContainer"]
layout_mode = 2
text = "condition"
label_settings = SubResource("LabelSettings_v4ya3")

[node name="ValueContainer" type="PanelContainer" parent="MarginIfContainer/IfContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mlc1d")

[node name="ValueLabel" type="Label" parent="MarginIfContainer/IfContainer/ValueContainer"]
layout_mode = 2
text = "value"
label_settings = SubResource("LabelSettings_v4ya3")

[node name="ThenLabel" type="Label" parent="MarginIfContainer/IfContainer"]
layout_mode = 2
text = "then"

[node name="MarginElseContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="MarginElseContainer"]
layout_mode = 2
text = "Else"

[connection signal="close_request" from="." to="." method="_on_close_request"]
